Fix issue caused by body overflow that was causing footer to rise as the browswer was changed size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,8 @@
 
 /* general */
 body {
+    position: relative;
+    min-height: 100vh;
     background-color: #f6f6f6;
 }
 
@@ -19,7 +21,7 @@ h1 {
 
 h1,
 h2 {
-    margin: 15px;
+    padding: 15px;
     font-family: "Montserrat", sans-serif;
 }
 
@@ -27,6 +29,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 60px;
 }
 
 footer {
@@ -34,7 +37,7 @@ footer {
     bottom: 0;
     height: 50px;
     width: 100%;
-    background-color: #aaa;
+    background-color: #1fab89;
 }
 
 /* note section */
